<resources>
    <string name="app_name">loginsdk</string>
    <string name="text_login_way">Please select login ways</string>
    <string name="text_login_agreement">我已经详细阅读并同意游戏用户协议和隐私政策</string>
    <string name="text_privacy">Read and accepted </string>
    <string name="text_user_privacys">隐私政策</string>
    <string name="text_agreement">Read and accepted </string>
    <string name="text_detail">(Required)</string>
    <string name="text_details">(Required)</string>
    <string name="text_user_agreement">用户协议</string>
    <string name="text_login">Login</string>
    <string name="text_facebook">Facebook account login</string>
    <string name="text_google">Google account login</string>
    <string name="text_into_game">Entering</string>
    <string name="facebook_test_app_id">336966757143644</string>
    <string name="fb_login_test_protocol_scheme">10e2be01b323f2c4d7b5c408b534946d</string>
    <string name="text_parameter_error">参数错误</string>
    <string name="text_login_failed">Login failed, please try again	</string>
    <string name="txt_default">default</string>
    <string name="txt_attention">Notification</string>
    <string name="text_sure">Confirm</string>
    <string name="text_logout">Sign out</string>
    <string name="text_seal_number">This account has been suspended, please contact Customer Service.</string>
    <string name="text_sealing_equipment">This is the device that was blocked. Please contact customer service.</string>
    <string name="text_user_privacy"><![CDATA[User Agreement   &  Privacy Policy]]></string>
    <string name="text_login_visitor">Guest login</string>
    <string name="text_privacy_detail">privacy policy</string>
    <string name="text_agreement_detail">user agreement</string>
    <string name="text_sure_guest">Are you sure to login as guest?</string>
    <string name="text_guest_content">Are you sure to log in as a guest? Your account information can\'t be reserved once reinstall the game, change device, update system,  and reset the device if you log in as a guest. For your account safety, please bind your account timely.</string>
    <string name="text_canceled">Cancel</string>
    <string name="text_turn_title">You are logging in as a guest,\n for your account safety, please bind your account timely.</string>
    <string name="text_login_continue">Continue to login</string>
    <string name="text_guest_bind">Bind account</string>
    <string name="text_guest_switch">Switch account</string>
    <string name="text_bind">Please bind your character with below accounts</string>
</resources>
