<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dp_318"
    android:layout_height="@dimen/dp_168"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_into_game"
        android:layout_width="@dimen/dp_96"
        android:layout_height="@dimen/dp_28"
        android:layout_below="@+id/ryt_bottom"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_15"
        android:background="@drawable/btn_corner"
        android:text="@string/text_into_game"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_10" />

    <RelativeLayout
        android:id="@+id/ryt_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ryt_privacy"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_18">


        <TextView
            android:id="@+id/txt_privacy_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_11"
            android:layout_toRightOf="@+id/ckb_privacy"
            android:text="@string/text_privacy"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_12"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/txt_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_toRightOf="@+id/txt_privacy_tips"
            android:text="@string/text_privacy_detail"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/sp_14" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/ckb_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:button="@drawable/bg_checkbox_one"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_10"
            android:src="@drawable/ic_next"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ryt_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_title"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_12"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_agreement_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_11"
            android:layout_toRightOf="@+id/ckb_agreement"
            android:text="@string/text_agreement"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/txt_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_toRightOf="@+id/txt_agreement_tips"
            android:text="@string/text_agreement_detail"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/sp_14" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/ckb_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:button="@drawable/bg_checkbox_one" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_10"
            android:src="@drawable/ic_next"
            android:visibility="gone" />

    </RelativeLayout>

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_22"
        android:gravity="center"
        android:text="@string/text_user_privacy"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold" />

</RelativeLayout>
