<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dp_318"
    android:layout_height="@dimen/dp_168"
    android:layout_gravity="center"
    android:gravity="center">


    <RelativeLayout
        android:id="@+id/ryt_guest_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_guest_content"
        android:layout_marginStart="@dimen/dp_44"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_44"
        android:gravity="center">

        <Button
            android:id="@+id/btn_guest_cancel"
            android:layout_width="@dimen/dp_96"
            android:layout_height="@dimen/dp_28"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_light_blue_corner"
            android:text="@string/text_canceled"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_10" />

        <Button
            android:id="@+id/btn_guest_continue"
            android:layout_width="@dimen/dp_96"
            android:layout_height="@dimen/dp_28"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_38"
            android:layout_toRightOf="@+id/btn_guest_cancel"
            android:background="@drawable/btn_light_blue_corner"
            android:text="@string/text_sure"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_10" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/ryt_guest"
        android:layout_width="@dimen/dp_145"
        android:layout_height="@dimen/dp_35"
        android:layout_below="@+id/txt_guest_tips"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_31"
        android:background="@drawable/btn_light_gray_corner"
        android:gravity="center"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_guest_left"
            android:layout_width="@dimen/dp_6"
            android:layout_height="@dimen/dp_6"
            android:layout_marginRight="@dimen/dp_30"
            android:src="@drawable/blue_point" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_guest_middle"
            android:layout_width="@dimen/dp_6"
            android:layout_height="@dimen/dp_6"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_toRightOf="@+id/img_guest_left"
            android:src="@drawable/blue_point" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_guest_right"
            android:layout_width="@dimen/dp_6"
            android:layout_height="@dimen/dp_6"
            android:layout_toRightOf="@+id/img_guest_middle"
            android:src="@drawable/blue_point" />

    </RelativeLayout>

    <TextView
        android:id="@+id/txt_guest_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_guest_title"
        android:layout_marginTop="@dimen/dp_9"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/text_login_way"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/sp_10"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_guest_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_guest_title"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/dp_38"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginEnd="@dimen/dp_38"
        android:text="@string/text_guest_content"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/sp_10"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/txt_guest_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_16"
        android:gravity="center"
        android:text="@string/text_sure_guest"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold" />


</RelativeLayout>
