<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dp_318"
    android:layout_height="@dimen/dp_168"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/dp_44"
    android:layout_marginRight="44dp"
    android:background="@drawable/bg"
    app:cardElevation="@dimen/dp_0">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/txt_general_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_24"
            android:gravity="center"
            android:text="@string/txt_attention"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16"
            app:fontFamily="@font/montserrat_bold" />

        <TextView
            android:id="@+id/txt_general_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_general_title"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_24"
            android:layout_marginBottom="@dimen/dp_24"
            android:text="@string/text_logout"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_12"
            app:fontFamily="@font/montserrat_bold" />


        <TextView
            android:id="@+id/txt_general_sure"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_below="@+id/txt_general_content"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_30"
            android:layout_marginBottom="@dimen/dp_15"
            android:background="@drawable/btn_blue_corner"
            android:gravity="center"
            android:text="@string/text_sure"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_12"
            app:fontFamily="@font/montserrat_semibold" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>
