<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_318"
    android:layout_height="@dimen/dp_168"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/lyt_bind_facebook"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_28"
        android:layout_below="@+id/txt_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_12"
        android:background="@color/colorFaceBook"
        android:gravity="center"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/dp_2"
            android:src="@drawable/google" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_6"
            android:layout_weight="1"
            android:text="@string/text_facebook"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_10" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyt_bind_google"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_28"
        android:layout_below="@+id/lyt_bind_facebook"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@color/colorFaceBook"
        android:gravity="center"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/dp_2"
            android:src="@drawable/google" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_6"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/text_google"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_10" />


    </LinearLayout>

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_bind_back"
        android:layout_marginTop="@dimen/dp_11"
        android:gravity="center"
        android:text="@string/text_bind"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/sp_12"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_bind_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_15"
        android:src="@drawable/ic_back" />

</RelativeLayout>
